@@ -1,3 +1,10 @@
+2007-01-21  Roger Sayle  <roger@eyesopen.com>
+	    Brooks Moses  <brooks.moses@codesourcery.com>
+	    Francois-Xavier Coudert  <coudert@clipper.ens.fr>
+
+	* gfortran.dg/intrinsic_sign_1.f90: New test case.
+	* gfortran.dg/intrinsic_sign_2.f90: Likewise.
+
 2007-01-19  Mike Stump  <mrs@apple.com>
 
 	* gcc.dg/darwin-ld-6.c: Remove, tests a linker flag that is going
